--- a/webapi/Lib/WebHooks/MccSoft.WebHooks/MccSoft.WebHooks.csproj
+++ b/webapi/Lib/WebHooks/MccSoft.WebHooks/MccSoft.WebHooks.csproj
@@ -5,9 +5,11 @@
     <LangVersion>latest</LangVersion>
     <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\$(AssemblyName).xml</DocumentationFile>
     <noWarn>1591</noWarn>
+    <Nullable>enable</Nullable>    
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="6.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.7" />
   </ItemGroup>
